`UserFriendTagRepository`: More `Optional<>` surrounding of repository db query methods